--- a/01-getting-started-with-data/01-lesson/01-01-lesson.Rmd
+++ b/01-getting-started-with-data/01-lesson/01-01-lesson.Rmd
@@ -53,10 +53,11 @@ Packages are the fundamental units of reproducible R code.
 They include reusable functions, the documentation that describes how to use them, and sample data.
 In this lesson we will make use of two packages:
 
-- **tidyverse**: Tidyverse is a collection of R packages for data science that a common philosophy of data and R programming, and are designed to work together naturally. You can learn more about tidyverse [here](https://tidyverse.org/). But no need to go digging through the package documentation, we will walk you through what you need to know about these packages as they become relevant. 
+- **tidyverse**: Tidyverse is a collection of R packages for data science that adhere to a common philosophy of data and R programming syntax, and are designed to work together naturally. You can learn more about tidyverse [here](https://tidyverse.org/). But no need to go digging through the package documentation, we will walk you through what you need to know about these packages as they become relevant. 
 - **openintro**: The openintro package contains datasets used in openintro resources. You can find out more about the package [here](http://openintrostat.github.io/openintro).
 
-We use the `library()` function in R to load packages. 
+Once we have installed the packages, we use the `library()` function to load 
+packages into R. 
 
 Let's load these two packages to be used in the remainder of this lesson.
 
@@ -71,9 +72,12 @@ In this lesson, we'll begin by introducing the terminology of datasets and data 
 
 One of the datasets that we will work with in this tutorial comes from the High School and Beyond Survey, which is a survey conducted on high school seniors by the National Center of Education Statistics.
 
-The data are organized in what we call a *data frame*, where each row represents an *observation* or a *case* and each column represents a *variable*. If you ever use spreadsheets, for example, a Google sheet or Excel, this representation should be familiar to you.
+The data are organized in what we call a *data frame*, where each row represents an *observation* or a *case* and each column represents a *variable*. If you ever use spreadsheets, such as a Google sheet or Excel, this representation should be familiar to you.
 
-In this lesson we'll work with the High School and Beyond dataset from the openintro package. The data are stored in a **data frame** called `hsb2`. You can read more about this dataset [here](http://openintrostat.github.io/openintro/reference/hsb2.html).
+In this lesson we'll work with the High School and Beyond dataset, stored in the openintro package. The data are stored in a **data frame** called `hsb2`. You can read more about this dataset [here](http://openintrostat.github.io/openintro/reference/hsb2.html). Below is a 
+preview of the dataset. You can use the arrow on the right hand side to scroll 
+through the variables, and the numbers on the bottom to see different rows in 
+the dataset.
 
 ```{r print-hsb2}
 hsb2
@@ -81,27 +85,30 @@ hsb2
 
 ### Loading data into R
 
-There are many ways of loading data into R depending on where your data are stored. In this lesson we're using a dataset that is already in an R package so we can access this dataset by loading the package with the `library()` function. Other commonly used formats of data are plain test, comma separated values (CSV), or RData (the file format R uses to store data). 
+There are many ways of loading data into R depending on where your data are stored. In this lesson we're using a dataset that is included in an R package so we can access this dataset by loading the package with the `library()` function. Other commonly used formats of data are plain test, comma separated values (CSV), Excel files (XLS or XLSX), or RData (the file format R uses to store data). 
 
-In many of the tutorials in these series we will use data from a existing R packages, so you won't need to worry about the myriad ways of loading data into R. However, learning more about loading data into R is very important for when you're working on an analysis of your own data. A resource we recommend for learning more about importing data into R is the Data Import chapter in [R 4 Data Science](https://r4ds.had.co.nz/data-import.html) by Grolemund and Wickham. 
+In many of the tutorials in these series we will use data from existing R packages, so you won't need to worry about the myriad ways of loading data into R. However, learning more about loading data into R is very important for when you're working on an analysis with your own data. A resource we recommend for learning more about importing data into R is the Data Import chapter in [R 4 Data Science](https://r4ds.had.co.nz/data-import.html) by Grolemund and Wickham. 
 
 ### Take a peek
 
-When you wan to work with data in R, the first thing you might want to do is to take a peek at it. The `glimpse()` function is one good way of doing this. Run the code below and take a look at the result.
+When you wan to work with data in R, a good first step is to take a peek at what
+the data look like. The `glimpse()` function is one good way of doing this. Click 
+on the blue "Run Code" button to run the code below, and take a look at the 
+output of the `glimpse()` function. 
 
 ```{r glimpse-hsb2, exercise=TRUE}
 glimpse(hsb2)
 ```
 
-The resulting output tells us that the data frame includes 200 observations and 11 variables. It also lists the variables and their types, along with values of the first few observations.
+The output of `glimpse()` tells us that the data frame includes 200 observations (rows) and 11 variables (columns). It also lists the variables and their types, along with values of the first few observations.
 
-Now let's put what you've learned so far to use.
+Now let's put what you've learned so far to use!
 
 ### 
 
 Next, we'll practice on another dataset, `email50`, which contains a subset of incoming emails for the first three months of 2012 for a single email account. We'll examine the structure of this dataset and determine the number of rows (observations) and columns (variables).
 
-Take a peek at the `email50` dataset with the `glimpse()` function. 
+Take a peek at the `email50` dataset using the `glimpse()` function. 
 
 *How many observations and variables are there?*
 
@@ -115,15 +122,15 @@ glimpse(email50)
 
 ## Types of variables
 
-When you first start working with a dataset, it's good practice to take a note of its dimensions; how many rows or observations and how many columns or variables, the data frame has.
+When you first start working with a dataset, it's good practice to take a note of its dimensions; how many rows or observations and how many columns or variables the data frame has.
 
-You learned how to do this in the previous section. You also learned how to take a quick look at the list of variables in the dataset. In this section, we will delve deeper into the categorization of variables as **numerical and categorical**. This is an important step, as the type of variable helps us determine what summary statistics to calculate, what type of visualizations to make, and what statistical method will be appropriate to answer the research questions we're exploring.
+You learned how to do this in the previous section using the `glimpse()` function. You also learned how to take a quick look at the list of variables in the dataset. In this section, we will delve deeper into the categorization of variables as **numerical and categorical**. This is an important step, as the type of variable helps us determine what summary statistics to calculate, what type of visualizations to make, and what statistical method will be appropriate to answer the research questions we're exploring.
 
 There are two types of variables: numerical and categorical.
 
 - **Numerical**, in other words, quantitative, variables take on numerical values. It is sensible to add, subtract, take averages, and so on, with these values.
 
-- **Categorical**, or qualitative, variables, take on a limited number of distinct categories. These categories can be identified with numbers, for example, it is customary to see the sex variable coded as 0 for men and 1 for women, but it wouldn't be sensible to do arithmetic operations with these values. They are merely placeholders for the levels of the categorical variable.
+- **Categorical**, or qualitative, variables, take on a limited number of distinct categories. These categories can be identified with numbers, for example, it is customary to see likert variables (strongly agree to strongly disagree) coded as 1 through 5, but it wouldn't be sensible to do arithmetic operations with these values. They are merely placeholders for the levels of the categorical variable.
 
 ### Numerical data
 
@@ -161,11 +168,19 @@ hsb2 %>%
   glimpse()
 ```
 
-Strictly speaking, this is a categorical variable, though the labeling of this variable is likely not that useful since we would not use this variable in an analysis of relationships between the variables in the dataset. It is equivalent to having the names of these students.
+Strictly speaking, this is a categorical variable, though the labeling of this variable is likely not that useful since we would not use this variable in an analysis of relationships between the variables in the dataset. You can think of this variable as being an anonymized version to 
+having the names of the students in the dataset.
 
-The next variable is gender and it's categorical with levels male and female. There is no inherent ordering to these levels no matter what anyone tells you! So, this is just a categorical variable.
+The next variable is gender, a categorical variable, with levels male and
+female. It should be noted that the language of government surveys, such as High
+School and Beyond, is slow to change. So with these types of data, you will
+continue to see variables mislabeled as "gender" when they in fact measure the
+biological sex (male, female) of the participant.  
 
-Same is true for the race variable.
+There is no inherent ordering to the levels of this variable, no matter what
+anyone tells you! So, this is just a categorical variable.The same is true for
+the race variable, which has levels of white, african american, hispanic, and
+asian.
 
 ```{r glimpse-hsb2-race-gender}
 hsb2 %>% 
@@ -173,7 +188,7 @@ hsb2 %>%
   glimpse()
 ```
 
-Socio-economic status, on the other hand, has three levels low, middle, and high that have an inherent ordering, hence it is an ordinal categorical variable.
+Socio-economic status, on the other hand, has three levels low, middle, and high that have an inherent ordering, hence this variable is an *ordinal* categorical variable.
 
 ```{r glimpse-hsb2-ses}
 hsb2 %>% 
@@ -201,7 +216,8 @@ Let's have another look at the `email50` data, so we can practice identifying va
 
 Use the `glimpse()` function to view the variables in the `email50` dataset.
 
-Remember that variable descriptions are available in the help file for the dataset, which we can access by typing `?email50` in the console (that is, type a question mark followed by the name of the dataset).
+Remember that variable descriptions are available in the help file for the dataset, which we can access by typing `?email50` (that is, type a question mark followed by the name of the
+dataset) in the code box and running it.
 
 *Review the output to identify each variable as either numerical or categorical, and further as discrete or continuous (if numerical) or ordinal or not ordinal (if categorical).*
 
@@ -219,22 +235,22 @@ glimpse(email50)
 
 ## Categorical data in R: factors
 
-There are various data classes in R. In this tutorial, we'll focus on ones that are relevant to the concepts we will introduce. One of these is a factor, which is what R often stores categorical variables as. An important use of factors is in statistical modeling, since categorical variables enter into models differently than numerical variables. We'll learn more about what this difference is in a later tutorial, but for now just keep in mind that while factors might crop up in places where they're not actually helpful, there are also many places where they are essential to running a statistical analysis correctly.
+There are various data classes in R. In this tutorial, we'll focus on ones that are relevant to the concepts we will introduce. One of these classes is a factor, which is what R often stores categorical variables as. An important use of factors is in statistical modeling, since categorical variables enter into models differently than numerical variables. We'll learn more about what this difference is in a later tutorial, but for now just keep in mind that while factors might crop up in places where they're not actually helpful, there are also many places where they are essential to running a statistical analysis correctly.
 
 ### Categorical Data
 
-- Often stores as factor in R
+- Often stored as factor in R
   + Important use: statistical modeling
   + Sometimes undesirable, sometimes essential
 - Common in subgroup analysis
   + Only interested in a subset of the data
-  + Filter for specific levels of categorical variable
+  + Filter for specific levels (values) of categorical variable
 
-A common step in many analyses that involve categorical data is subgroup analysis, where we work with only a subset of the data, for example, analyzing data only from students in public schools or only females. We can obtain these subsets by filtering for the specific levels we're interested in.
+A common step in many analyses that involve categorical data is a subgroup analysis, where we work with only a subset of the data. For example, analyzing data only from students in public schools or only for students who identified as female. We can obtain these subsets by filtering for the specific levels we're interested in.
 
 Suppose we want to do an analysis of only the students in public schools in the High School and Beyond dataset. Let's first find out how many such students there are.
 
-One option for obtaining this information in R is the `count()` function from the **dplyr** package, which is part of the tidyverse. This package provides a variety of functions for wrangling data. Once such function is `count()` which gives the frequencies of occurrence of unique values in a given column. In this case we're interested in the `schtyp` column (school type).
+One option for obtaining this information in R uses the `count()` function from the **dplyr** package, one of the packages included in the tidyverse. This package provides a variety of functions for wrangling and summarizing data. Once such function is `count()` which gives the frequencies of occurrence of the unique values in a given column. In this case we're interested in the number of students for each level of the `schtyp` (school type) column.
 
 ```{r hsb2-count-schtyp, exercise=TRUE}
 hsb2 %>% 
@@ -243,50 +259,83 @@ hsb2 %>%
 
 There are 168 students in public schools and 32 in private schools.
 
-Let's pause for a moment and dissect these two lines of code.
+Let's pause for a moment and dissect what happened in these two lines of code.
 
-We can read this as: "take the `hsb2` data frame and **pipe it** into the `count()` function. `count()` the occurrences of unique values in the `schtyp` variable.
+We can read the code as: "take the `hsb2` data frame and **pipe it** into the
+`count()` function, then `count()` the occurrences of unique values in the 
+`schtyp` variable."
 
-So what do we mean by _"pipe it into the filter function"_?
+You might be wondering what we mean by _"pipe it into the `count()` function"_?
 
 ### The pipe operator
 
 ![](images/pipe-operator.png){width="30%"}
 
-The **pipe operator**, which **is percent greater than percent**, tells R to pass the object that comes before it to the function that comes after it.
+The **pipe operator**, which **is percent greater than percent**, tells `R` to
+pass the object that comes before it into the first argument of the function
+that comes after it. Mathematically, **x pipe f(y)** becomes *f(x, y)*, since x
+is piped into the first argument of the function f().
 
 ![](images/pipe-operator2.png){width="30%"}
 
-So **x pipe f of y** becomes *f of x y*.
-
-For example, one way of adding numbers in R is using the `sum()` function. `sum()` of 3 and 4 gives us 7.
+For example, one way of adding numbers in R is using the `sum()` function. The 
+`sum()` function has as many arguments as there are numbers you wish to add, 
+where each number is separated with a comma. For example, to add 3 and 4, we 
+would use the following code. Notice, 3 and 4 are separated by a comma, 
+indicating that these are the two numbers we wish for the `sum()` function to 
+add. 
 
 ```{r sumdata1, echo=TRUE}
 # Sum of 3 and 4, without pipe
 sum(3, 4)
 ```
 
-If we wanted to do the same operation with a pipe, we would write this as 3 pipe sum 4.
+If we wanted to do the same operation with a pipe, we would instead use the
+code below. The pipe operator inserts 3 as the first argument into the `sum()`
+function, which looks like `sum(3, 4)`. 
 
 ```{r sumdata2, echo=TRUE}
 # Sum of 3 and 4, with pipe
 3 %>% sum(4)
 ```
 
-Pipes allow us to sequentially build data wrangling operations. We'll start with short pipes and throughout the tutorial build up to longer pipes that perform multiple operations.
+Piping 3 into the `sum()` function may seem a bit silly, especially since it's 
+not much easier than typing `sum(3,4)`. However, as we progress through these 
+tutorials you will see that the piping operator will allow us to sequentially
+link together data wrangling operations. This can save us a great deal of 
+headache later on, as the format of operations that use the pipe are far simpler 
+to read! We'll start with short pipes and throughout the tutorial build up to
+longer pipes that perform multiple operations.
 
-Next, let's `filter()` for public school students. 
+Next, let's use the `filter()` function to filter the data to only include
+public school students. 
 
 ```{r hsb2-filter-schtyp-public, exercise=TRUE}
 hsb2_public <- hsb2 %>%
   filter(schtyp == "public")
 ```
 
-We can read this as: "take the `hsb2` data frame and **pipe it** into the `filter()` function. `filter()` the data **for cases where school type is equal to public**. Then, **assign the resulting data frame** to a new object called **hsb2 underscore public**."
+We can read the above code as: "take the `hsb2` data frame and **pipe it** into
+the `filter()` function. Next, `filter()` the data **for cases where school type
+is equal to public**. Then, **assign the resulting data frame** to a new data 
+frame called **hsb2 underscore public**."
 
-We should take note of another piece of R syntax: *the double equal sign*. This is the logical test for *"is equal to"*. In other words, we first determine if school type is equal to public for each of the observations in the dataset and filter for those where this is true.
+We should take note of two pieces of R syntax: *the double equal sign* (`==`) 
+and quotations (""). In R, `==` is a logical test for *"is equal to"*. `R` uses
+this logical test to search for observations (rows) in the data frame where
+school type is equal to public, and returns a data frame frame where this
+comparison is `TRUE` for every row. 
 
-Now, if we make another frequency table of school type in the filtered dataset, we should only see public school in the output.
+In R, variables that are categorical use characters (rather than numbers) for
+values. To indicate to R that you want 
+your logical test to compare the values of a categorical variable to a specific
+level of that variable, you need to surround the name of the level in quotations
+(e.g. `schtyp == "public"). The quotations tell R that the value of the variable 
+is a character, not a number. If you forget to use quotations, R will give you 
+an error message!
+
+Now, if we make another frequency table of school type in the filtered dataset,
+we should only see public school in the output.
 
 ```{r hsb2-count-schtyp-again, exercise=TRUE}
 hsb2_public %>%
@@ -302,13 +351,12 @@ Categorical data are often stored as factors in R. Next, we'll practice working 
 - Create a new dataset called `email50_big` that is a subset of the original `email50` dataset containing only emails with `"big"` numbers. This information is stored in the `number` variable.
 - Report the dimensions of `email50_big` using the `glimpse()` function again. *How many emails contain big numbers?*
 
-
 ```{r email50-filter-number-big, exercise=TRUE}
 # Subset of emails with big numbers: email50_big
 email50_big <- ___ %>%
   filter(___)
 
-# Glimpse the subset
+# Glimpse the subset 
 
 ```
 
@@ -329,50 +377,57 @@ glimpse(email50_big)
 
 A common way of creating a new variable from an existing variable is discretizing, that is converting a numerical variable to a categorical variable based on certain criteria.
 
-For example, suppose we are not interested in the actual reading score of students, but instead whether their reading score is below average or at or above average. First, we need to calculate the average reading score with the `mean()` function. This will give us the mean value, 52.23. However, in order to be able to refer back to this value later on, we might want to store it as an object that we can refer to by name.
+For example, suppose we are not interested in the actual reading score of students, but instead whether their reading score is below average or at or above average. First, we need to calculate the average reading score with the `mean()` function. This will give us the mean value, 52.23. 
 
 ```{r hsb2-mean-read, exercise=TRUE}
 # Calculate average reading score and show the value
 mean(hsb2$read)
 ```
-
-So instead of just printing the result, let's save it as a new object called **avg underscore read**.
+However, in order to be able to refer back to this value later on, we might want to store it as an object that we can refer to by name. So instead of just printing the result, let's save it as a new object called **avg underscore read**.
 
 ```{r hsb2-mean-read-assign, exercise=TRUE}
 # Calculate average reading score and store as avg_read
 avg_read <- mean(hsb2$read)
 ```
 
-Before we more on, a quick tip: most often we want to do both; see the value and also store it for later use. The approach we used here, running the `mean()` function twice, is redundant.
-
-Instead, you can simply wrap your assignment code in parentheses so that R will not only assign the average value of reading test scores to avg read, but it will also print out its value.
+Before we move on, a quick tip: most often we want to do both; see the value and also store it for later use. The approach we used here, running the `mean()` function twice, is redundant. A less redundant 
+way to accomplish this task is to wrap your assignment code in parentheses so that R will both assign the average value of reading test scores to `avg_read`, and print out the value assigned to 
+`avg_read`. 
 
 ```{r hsb2-mean-read-assign-show, exercise=TRUE}
 (avg_read <- mean(hsb2$read))
 ```
 
-Next, in order to create the two groups of interest, we need to determine whether each student is either (1) below or (2) at or above average. For example, a reading score of 57 is above average, so is 68, but 44 is below. Obviously, going through each record like this would be tedious and error prone.
+Next, in order to create the two groups of interest, we need to determine whether each student is either (1) below or (2) at or above average. For example, a reading score of 57 is above average, so is 68, but 44 is below. Obviously, going through each record like this would be tedious and error prone, so 
+let's explore another option! 
 
 ### New variable: `read_cat`
 
 ![](images/new-variable-read-cat.png){width="50%"}
 
-Instead we can create this new variable with the `mutate()` function.
+Instead we can create a new variable, named `read_cat`, with the `mutate()`
+function and the helpful `if_else()` function. 
 
 ```{r hsb2-mutate-read-cat, exercise=TRUE}
 hsb2 <- hsb2 %>%
-  mutate(read_cat = if_else(read < avg_read, "below average", "at or above average"))
+  mutate(read_cat = if_else(read < avg_read,
+                            "below average",
+                            "at or above average")
+         )
 ```
 
-We start with the data frame, `hsb2`, and pipe it into `mutate()`, to create a new variable called `read_cat`. Note that we are using a new variable name here in order to not overwrite the existing reading score variable, called `read`. 
+First, we start with the data frame, `hsb2`, and pipe it into the `mutate()` 
+function. We use the `mutate()` function to create a new variable called
+`read_cat`. Note that we are using a new variable name here, so that we do not 
+overwrite the existing reading score variable, called `read`. 
 
-The decision criteria for this new variable is simple: if the reading score of the student is below the average reading score, label "below average", otherwise, label "at or above average".
+The values of this new variable are simple: if the reading score of the student is below the average reading score, the variable will have the label "below average", otherwise, the label will be "at or above average".
 
-This can be accomplished using the `if_else()` function in R:
+This discretization can be accomplished using the `if_else()` function in R:
 
-- The first argument of the function is the logical test: `read < avg_read`.
-- The second argument is what to do if the result of the logical test is `TRUE`, in other words, if the student's score is below the average score: `"below average"`.
-- The third argument is what to do if the result of the logical test is `FALSE`, in other words, if the student's score is above the average score: `"at or above average"`.
+- The first argument of the function is the logical test we wish to perform: `read < avg_read`.
+- The second argument is what we want the function to do if the result of the logical test is `TRUE`, in other words, if the student's score is below the average score: `"below average"`.
+- The third argument is what we want the function to do if the result of the logical test is `FALSE`, in other words, if the student's score is above the average score: `"at or above average"`.
 
 Next, it's your turn to discretize a different variable.
 
@@ -384,8 +439,9 @@ The median marks the 50th percentile, or midpoint, of a distribution, so half of
 
 The `email50` dataset is available in your workspace.
 
-- Find the median number of characters in emails, save the result as `med_num_char`.
-- Using `mutate()`, create a new column called `num_char_cat`, which discretizes the `num_char` variable into `"below median"` or `"at or above median"`. Assign the result to `email50_updated`.
+- Find the median number of characters in emails, save the result to a variable named `med_num_char`.
+- Using `mutate()`, create a new column called `num_char_cat`, which discretizes the `num_char` variable into `"below median"` or `"at or above median"`.
+- Assign the resulting data frame to a new data frame named `email50_updated`.
 - Then, using `count()`, determine the number of emails in each level of `num_char_cat`. Evaluate whether these counts match the expected numbers.
 
 ```{r hsb2-mutate-num-char-cat, exercise=TRUE}
@@ -425,20 +481,34 @@ Another common way of creating a new variable based on an existing one is by *co
 
 For now, do your best to understand the code we've provided to generate the plot. We will go through it in detail in the next section.
 
-- Create a new column in `email50` called `number_cat` that is `"no"` if there is no number in the email and `"yes"` otherwise. Use `case_when()` for this. Assign this to `email50_updated`.
+For the `email50` dataset, the `number` variable has three levels, "none", "some", 
+and "big". We want to create a new variable that combines the levels "some" and
+"big" into one level named "yes", and keeps the "none" level separate as a level 
+named "no". In this exercise we will use the `case_when()` function, a cousin 
+of the `if_else()` function. The `case_when()` function behaves similarly to the 
+`if_else()` function, but where `if_else()` only accepts two options (what to 
+do when the comparison is `TRUE` and `FALSE`), `case_when()` accepts as many 
+options as you want to give it! 
+
+
+
+- Create a new column in `email50` called `number_cat` that is `"no"` if there is no number in the email and `"yes"` otherwise. Use the `case_when()` function to accomplish this. 
+- Assign the resulting data frame to a new data frame named `email50_updated`.
 - Run the code provided to visualize the distribution of the `number_cat` variable.
 
 ```{r email50-fortified, exercise=TRUE}
 # Create number_cat column in email50
  email50_updated <- email50 %>%
-   mutate(
-     ___ = case_when(
-       # if number is "none", make number_cat "no"
-       ___ ~ "___", 
-       # if number is not "none", make number_cat "yes"
-       ___ ~ "___"  
-     )
-   )
+   mutate(<NAME OF NEW VARIABLE> = 
+            case_when(
+              # if number is "none", make number_cat "no"
+              <LOGICAL COMPARISON> ~ "<VALUE>",
+              # if number is "small", make number_cat "yes"
+              <LOGICAL COMPARISON> ~ "<VALUE>", 
+              # if number is "big", make number_cat "yes"
+              <LOGICAL COMPARISON> ~ "<VALUE>"
+              )
+          )
    
  
 # Visualize the distribution of number_cat
@@ -489,39 +559,38 @@ ggplot(email50_updated, aes(x = number_cat)) +
 
 The most logical and most useful first step of any data analysis is an exploratory analysis. And a very important and informative component of exploratory data analysis is visualization.
 
-We will learn a lot more about data visualization in the tutorial on Summarizing and Visualizing Data, so we won't go into too much detail on data visualization in this tutorial. Let's, however, make a simple scatter plot to visualize the relationship between two numerical variables so that you can get some exposure to constructing plots in R and how to interpret them.
+We will learn a lot more about data visualization in the tutorial on Summarizing and Visualizing Data, so we won't go into too much detail on data visualization in this tutorial. Let's, however, make a simple scatterplot to visualize the relationship between two numerical variables so that you can get some exposure to constructing plots in R and how to interpret them.
 
-There are many ways of visualizing data in R, but in this tutorial we will focus on using the ggplot2 package, which is part of the tidyverse.
+There are many methods for visualizing data in R, but in this tutorial we will focus on using the ggplot2 package, which is part of the tidyverse.
 
 We chose ggplot2 because this package makes *modern looking hassle-free plots* that take care of fiddly details like drawing legends.
 
-Additionally, once you learn how to make simple bivariate plots, it is easy to extend your code to create a visualization that displays the relationship between many variables at once without having to learn too much more syntax.
+Additionally, once you learn how to make simple bivariate plots, with ggplot2 it is easy to extend your code to create a visualization that displays the relationship between many variables at once without having to learn too much more syntax.
 
 Another attractive feature of ggplot2 is that you can build your plots in layers, e.g. you can start with a layer showing the raw data and then add layers of annotations and statistical summaries. This is an attractive feature for learning the syntax, as we can go step-by-step, starting with a simple plot and slowly building up to more complex ones.
 
 We'll visualize the relationship between the math and science scores of the students in the High School and Beyond dataset.
 
 ```{r hsb2-science-math, exercise=TRUE}
-ggplot(data = hsb2, aes(x = science, y = math)) +
+ggplot(data = hsb2, aes(x = science, y = math)) + 
   geom_point()
 ```
 
-Let's pause for a moment and review the code.
+Let's pause for a moment and review what's going on in the code above.
 
 - We use the `ggplot()` function to create plots.
-- The first argument is the data frame containing the data we wish to plot: data = hsb2.
+- The first argument is the data frame containing the data we wish to plot: `data = hsb2`.
 - In the `aes`thetics argument, we map variables from the data frame to certain components of the plot. In this case we want to plot science test scores on the x and math test scores on the y axis: `aes(x = science, y = math)`.
-- Lastly, we specify what geometric shapes should be used to represent each observation. In this case, we want to make a scatter plot, so we want each observation to be represented by a "point" on the plot, hence we use the `geom_point()` function.
+- Lastly, we specify what `geom`etric shapes should be used to represent each observation. In this case, we want to make a scatterplot, so we want each observation to be represented by a "point" on the plot, hence we add use the `geom_point()` function to add a points layer to the plot.
 
-In summary, the main function is `ggplot()`, the first argument is the data, then the aesthetics map the variables to certain features of the plot, and finally the geom informs the type of plot you want to make.
+In summary, the main function is `ggplot()`, the first argument is the data to use, then the aes maps the variables to certain features of the plot, and finally the geom informs the type of plot you want to make.
 
-Another important aspect to note here is that the `geom_XXX()` function is separated from the `ggplot()` function with a plus, `+`. 
-
-As we mentioned earlier, ggplot2 plots are constructed in series of layers. The plus sign separates these layers. While it is not mandatory to move to the next line for each layer, doing so makes the code a lot easier to organize and read. So, we will follow this structure in this tutorial and we strongly recommend you do so whenever you're making plots with ggplot2.
+Another important aspect to note here is that the `geom_XXX()` function is separated from the `ggplot()` function with a plus, `+`. As we mentioned earlier, ggplot2 plots are constructed in series of layers. The plus sign separates these layers. Generally, the `+` sign can be thought of as the end of 
+a line, so you should always hit enter/return after it. While it is not mandatory to move to the next line for each layer, doing so makes the code a lot easier to organize and read. So, we will follow this structure in this tutorial and we strongly recommend you do so whenever you're making plots with ggplot2.
 
 Now that you've learned how to make the plot, let's talk about what the plot says.
 
-### Interpreting a visualisation
+### Interpreting a visualization
 
 We can see that there is a positive relationship between the science and math scores of students, meaning that students who score highly in science tend to also score highly in math. Probably not that surprising a result.
 
@@ -531,11 +600,11 @@ ggplot(data = hsb2, aes(x = science, y = math)) +
   geom_smooth(method = "lm", se = FALSE)
 ```
 
-We also mentioned earlier that extending from bivariate to multivariate plots is easy in ggplot2. Let's test that out.
+We also mentioned earlier that extending from bivariate to multivariate plots is easy in ggplot2. Let's test that out!
 
 ### Math, science, and program
 
-Let's plot the same math and science test scores, but this time let's also consider the program: general, academic, or vocational that the student is in.
+Let's plot the same math and science test scores, but this time let's also consider the program that the student is in: general, academic, or vocational. 
 
 ```{r hsb2-science-math-prog, exercise=TRUE}
 ggplot(data = hsb2, aes(x = science, y = math, color = prog)) +
@@ -544,7 +613,10 @@ ggplot(data = hsb2, aes(x = science, y = math, color = prog)) +
 
 The code looks very similar to what we used before, except that we now have one other aesthetic mapping between the program variable and the `color` of the points that represent the observations. Note that we type the name of the variable as it appears in the data frame: `prog`.
 
-So, what do we see here? Let's think about where the lines would go if we fit a separate line for each level of the program variable.
+How does the plot below differ from the plot above? Look at the plot above and 
+think about where the lines would go if we fit a separate line for each level
+of the program variable (each color of points). The result would be a plot that
+looks like the one below. 
 
 ```{r hsb2-science-mat-prog-lm}
 ggplot(data = hsb2, aes(x = science, y = math, color = prog)) +
@@ -558,13 +630,22 @@ We will wrap up this lesson with some practice creating a similar plot with diff
 
 ### Visualizing numerical and categorical data
 
-Next we'll visualize the relationship between two numerical variables from the `email50` dataset, conditioned on whether or not the email was spam. This means that we will use an aspect of the plot (like color or shape) to identify the levels in the `spam` variable so that we can compare plotted values between them.
+Next we'll visualize the relationship between two numerical variables from the `email50` dataset, separated by whether or not the email was spam. This means that we will use an aspect of the plot (like color or shape) to identify the levels in the `spam` variable so that we can compare plotted values between them.
 
-Recall that in the `ggplot()` function, the first argument is the dataset, then we map the aesthetic features of the plot to variables in the dataset, and finally the `geom_*()` layer informs how data are represented on the plot. Next, we will make a scatterplot by adding a `geom_point()` layer to the `ggplot()` call.
+Recall that in the `ggplot()` function, the first argument is the dataset, then we map the aesthetic features of the plot to variables in the dataset, and finally the `geom_XXX()` layer informs how data are represented on the plot.
+
+Next, we will make a scatterplot by adding a `geom_point()` layer to the `ggplot()` call.
 
 - Create a scatterplot of number of exclamation points (`exclaim_mess`) on the y-axis vs. number of characters (`num_char`) on the x-axis.
 - Color points by whether or not the email is `spam`.
-- Note that the `spam` variable is stored as numerical (0/1) but we want to use it as a categorical variable in this plot. To do this, force R to think of it as such with the `factor()` function. 
+
+Note that when you first make the plot, you will see a color gradient in place 
+of where you expected to see a legend like before. This gradient appears because
+`spam` is stored as a numerical variable (0 = no, 1 = yes). But, we want to use
+it as a categorical variable in this plot. To do this we can force R to think of
+`spam` as a factor, by temporarily converting it to a factor inside the `ggplot`. 
+To do this we insert the name of the variable we want to convert to a factor 
+(`spam`) into the the `factor()` function (e.g. `factor(spam)`). 
 
 ```{r email50-plot, exercise=TRUE}
 ggplot(email50, aes(x = ___, y = ___, color = ___)) +
@@ -591,7 +672,7 @@ ggplot(email50, aes(x = num_char, y = exclaim_mess, color = factor(spam))) +
   geom_point()
 ```
 
-*Based on the plot, does there appear to be a relationship between these variables?*
+*Based on the plot, does there appear to be a relationship between these variables?* 
 
 ## Congratulations!
 
